# nl2sql2nl_mimic_fhir

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TABLE_RELATIONSHIPS.md  main.py  pyproject.toml
config/: database.yaml  logging.yaml
config/dictionary/: dictionary.yaml  tables.yaml
config/ingestion/: common.yaml  condition.yaml  condition_ed.yaml  encounter.yaml  encounter_ed.yaml  encounter_icu.yaml  location.yaml  medication.yaml  medication_administration.yaml  medication_administration_icu.yaml  medication_dispense.yaml  medication_dispense_ed.yaml  medication_mix.yaml  medication_request.yaml  medication_statement_ed.yaml  observation_chartevents.yaml  observation_datetimeevents.yaml  observation_ed.yaml  observation_labevents.yaml  observation_micro_org.yaml  observation_micro_susc.yaml  observation_micro_test.yaml  observation_outputevents.yaml  observation_vital_signs_ed.yaml  organization.yaml  patient.yaml  procedure.yaml  procedure_ed.yaml  specimen.yaml  (+1 more)
docs/: ingestao.md  streamlit.md
prompts/: prompt01_ingestao.md  prompt02.md  prompt04_refactoring.md  prompt05_ingestao.md  prompt07_ingestao.md  prompt09_ingestao.md  prompt12_ingestao.md  prompt13_ingestao.md  prompt15_ingestao.md  prompt16_ingestao.md  prompt17_ingestao.md  prompt19_ingestao.md  prompt22_ingestao.md  prompt23_ingestao.md  prompt24_ingestao.md  prompt25_ingestao.md  prompt26_ingestao.md  prompt27_ingestao.md  prompt29_ingestao.md  prompt30_ingestao.md
src/: __init__.py  main.py
tests/: test_location_transformer.py  test_ndjson_gzip_reader.py  test_organization_transformer.py
(+191 files in other folders)
