[project]
name = "nl2sql2nl-mimic-fhir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary]>=3.2.0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.30",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
]
