[project]
name = "nl2sql2nl-mimic-fhir"
version = "0.10.0"
description = "Pipeline simplificada de ingestão FHIR para Organization, Location, Patient, Encounter, EncounterED, EncounterICU, Medication, MedicationMix e MedicationRequest"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary]>=3.2.0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.30",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["."]
